Terminada página de estadísticas y creación de datos de prueba en la base de datos

--- a/src/MisCupones/UsuariosBundle/Resources/views/Front/estadisticas.html.twig
+++ b/src/MisCupones/UsuariosBundle/Resources/views/Front/estadisticas.html.twig
@@ -16,7 +16,7 @@
         <div class="col-md-12 col-xs-12">
             <h3>Estadísticas</h3>
 
-            <p>A continuación se muestran las estadísticas de venta y canjeo de cupones totales, y por establecimiento:</p>
+            <p>A continuación se muestran las estadísticas de venta y canjeo totales de cupones, dividido por establecimiento:</p>
 
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
@@ -35,7 +35,7 @@
 
                                 <div class="totales-por-cupon">
                                     <span> 
-                                        Vendidos: {{cupon['totales']}} / Canjeados: {{cupon['canjeados']}} 
+                                        TOTALES - Vendidos: {{cupon['totales']}} / Canjeados: {{cupon['canjeados']}} 
                                     </span>
                                 </div>
                             
